--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
 
     <div class="image">
-        <img src="https://github.com/yuvaraj-1991/DiscussionForumTestApp/blob/master/images/forumapp1.jpeg" alt="logo" style="width: 1000px;height:500px;">
+        <img src="https://raw.githubusercontent.com/yuvaraj-1991/DiscussionForumTestApp/master/images/forumapp1.jpeg" alt="logo" style="width: 1000px;height:500px;">
     </div>
 
     <nav class="navbar navbar-light bg-light">
