--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
 
     <div class="image">
-        <img src="https://images.unsplash.com/photo-1520627977056-c307aeb9a625?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" style="width: 1000px;height:500px;">
+        <img src="https://images.unsplash.com/photo-1520627977056-c307aeb9a625?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format" style="width: 1000px;height:500px;">
     </div>
 
     <nav class="navbar navbar-light bg-light">
